Fixing map z-index.

--- a/view/frontend/web/css/source/_module.less
+++ b/view/frontend/web/css/source/_module.less
@@ -216,6 +216,7 @@
         width : 100%;
         height: 100%;
         background: #666;
+        z-index:2;
     }
 
     .contextual-bar {
